fix spacing issues in text column

--- a/intro-component-with-signup-form/scss/main.scss
+++ b/intro-component-with-signup-form/scss/main.scss
@@ -74,10 +74,11 @@ a {
 	margin-bottom: 0;
 	font-size: 2rem;
 	font-size: clamp(1.75rem, 5vw, 3rem);
+	line-height: 1.3;
 }
 
 .subtitle {
-	margin-top: 0.75rem;
+	margin-top: 1.5rem;
 	font-size: 1rem;
 	line-height: 1.6;
 }
@@ -233,6 +234,11 @@ a {
 
 	.title {
 		max-width: 20ch;
+		line-height: 1.1;
+	}
+
+	.subtitle {
+		margin-top: 1.55rem;
 	}
 
 	.form-column {
